# bmp

./: CMakeLists.txt  GNUmakefile
examples/: .gitignore  GNUmakefile
examples/src/: 1.c  2.c  ft_suppress_msvc_warnings.h
include/: ft_bmp.h
src/: ft_bmp_deserialize.c  ft_bmp_new.c  ft_bmp_serialize.c
